--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,24 @@ div#oyun-cerceve {
   .kart-arkayuz {
     transform: rotateY(180deg);
   }
+
+  .gif{
+    width: 100%;
+    max-width: 800px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    display: none;
+  }
+
+  .d-block{
+    display: block !important;
+  }
+  .d-none{
+    display: none !important;
+  }
+
+  .bg-black{
+    background-color: #050403;
+  }
